# gan_organism_arena

./: LICENSE.txt  README.md  install_windows.bat  pyproject.toml  requirements-optional.txt  requirements.txt  run_safe_windowed.bat  run_selftest.bat  run_windowed.bat  run_windows.bat
changelogs/: CHANGELOG.md
docs/: DESIGN.md  README.md
language/: de.json  en.json  fr.json
src/pandalife_gan/: __init__.py  app_config.py  localization.py  main.py  runtime_logging.py
src/pandalife_gan/ai/: critic.py  genome.py  model_loader.py  pseudo_gan.py
src/pandalife_gan/assets/: manifest.json
src/pandalife_gan/render/: image_builder.py  object_mesh.py  panda_app.py  soundscape.py  terrain_mesh.py
src/pandalife_gan/simulation/: components.py  conway.py  organism.py  world.py
tools/: download_assets.py  verify_project.py
